<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_activity_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_activity_main_toolbar_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/tajawal_medium"
                android:gravity="center"
                android:padding="@dimen/padding_4dp"
                android:text="@string/weather"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_activity_main_toolbar_search"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/x_light_gray_border_white_solid_rounded_4dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_info"
            app:layout_constraintWidth_percent=".9">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_activity_main_toolbar_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_gray_down_arrow_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_activity_main_toolbar_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/tajawal_regular"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:gravity="center_vertical"
                android:paddingHorizontal="@dimen/padding_8dp"
                android:text="@string/select_country"
                android:textColor="@color/gray"
                android:textSize="@dimen/medium_text_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_activity_main_toolbar_search"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/pb_data_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_search"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_4dp"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/my_progress_indeterminate" />
        </FrameLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_activity_main_weather_container"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:background="@drawable/orange_rectangle_rounded_8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintStart_toStartOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_search">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_activity_main_city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:fontFamily="@font/tajawal_bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/large_text_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="El-Mansoura" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_activity_main_degree_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_activity_main_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center"
                    android:scaleY="1.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/xlarge_text_24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="300.16" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_activity_main_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_8"
                    android:fontFamily="@font/tajawal_regular"
                    android:gravity="center"
                    android:scaleY="1.5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_12sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_activity_main_degree"
                    app:layout_constraintStart_toEndOf="@id/tv_activity_main_degree"
                    tools:text="Clear" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_activity_main_degree_data"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/dp_12"
                android:layout_marginStart="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_activity_main_degree_status">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_activity_main_min_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_min_degree_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"

                        android:text="@string/min_temperature"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_min_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_activity_main_min_degree_label"
                        app:layout_constraintStart_toEndOf="@id/tv_activity_main_min_degree_label"
                        app:layout_constraintTop_toTopOf="@id/tv_activity_main_min_degree_label"
                        tools:text="300" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_activity_main_max_degree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_activity_main_min_degree">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_max_degree_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"
                        android:text="@string/max_temperature"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_max_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_activity_main_max_degree_label"
                        app:layout_constraintStart_toEndOf="@id/tv_activity_main_max_degree_label"
                        app:layout_constraintTop_toTopOf="@id/tv_activity_main_max_degree_label"
                        tools:text="300" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_activity_main_wind_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_activity_main_max_degree">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_wind_speed_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_regular"
                        android:gravity="center"
                        android:text="@string/wind_speed"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_activity_main_wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dp_8"
                        android:fontFamily="@font/tajawal_medium"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text_12sp"
                        app:layout_constraintBottom_toBottomOf="@id/tv_activity_main_wind_speed_label"
                        app:layout_constraintStart_toEndOf="@id/tv_activity_main_wind_speed_label"
                        app:layout_constraintTop_toTopOf="@id/tv_activity_main_wind_speed_label"
                        tools:text="6.1" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_activity_main_cities_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintStart_toStartOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_search"
            tools:visibility="visible">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_activity_main_cities_list"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="-2dp"
                android:background="@drawable/x_light_gray_border_white_solid_rounded_4dp"
                android:padding="@dimen/padding_4dp"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_activity_main_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_box_ic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintStart_toStartOf="@id/cl_activity_main_toolbar_search"
            app:layout_constraintTop_toBottomOf="@id/cl_activity_main_toolbar_search"
            app:srcCompat="@drawable/ic_gray_down_arrow_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_activity_main_try_again"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginVertical="@dimen/margin_24dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:background="@drawable/red_solid_rounded_8dp"
            android:fontFamily="@font/tajawal_medium"
            android:gravity="center"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text_18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent=".8"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>